# AnalysisTreeQA

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml  doxygen.yml
app/: Application.cpp  Application.hpp  CMakeLists.txt  ProgramOptions.cpp  ProgramOptions.hpp  README.md  main.cpp
cmake_modules/: AnalysisTree.cmake  AnalysisTreeQAConfig.sh.in
config/: config.yaml  tmp.yaml
examples/: CMakeLists.txt  example.cpp
src/: CMakeLists.txt  EntryConfig.cpp  EntryConfig.hpp  Task.cpp  Task.hpp
steer/: AnalysisTreeQASteerLinkDef.h  CMakeLists.txt  Config.cpp  Config.hpp  README.md  Run.cpp  Run.hpp  TaskFactory.cpp  TaskFactory.hpp
test/: CMakeLists.txt
test/integration/: Manager.test.hpp
